@@ -31,7 +31,7 @@ import threading
 import __builtin__
 
 from nicos import session
-from nicos.utils import printTable
+from nicos.utils import printTable, parseDateString
 from nicos.core import Device, Moveable, Measurable, Readable, HasOffset, \
      HasLimits, UsageError, formatStatus
 from nicos.commands import usercommand
@@ -311,16 +311,17 @@ def history(dev, key='value', fromtime=None, totime=None):
     >>> history(mtt, 'offset')    # show offset of mth in the last day
     """
     # support calling history(dev, -3600)
+    if isinstance(key, str):
+        try:
+            key = parseDateString(key)
+        except ValueError:
+            pass
     if isinstance(key, (int, float)):
         totime = fromtime
         fromtime = key
         key = 'value'
     if key not in ('value', 'status') and fromtime is None:
         fromtime = -24
-    if fromtime is not None and fromtime < 0:
-        fromtime *= 3600
-    if totime is not None and totime < 0:
-        totime *= 3600
     hist = session.getDevice(dev, Device).history(key, fromtime, totime)
     entries = []
     ltime = time.localtime
