@@ -37,8 +37,7 @@ from nicos.core.params import Param, Override, Value, tupleof, floatrange, \
 from nicos.core.errors import NicosError, ConfigurationError, \
      ProgrammingError, UsageError, LimitError, ModeError, \
      CommunicationError, CacheLockError, InvalidValueError, AccessError
-from nicos.utils import loggers
-from nicos.utils import getVersions
+from nicos.utils import loggers, getVersions, parseDateString
 
 
 def usermethod(func):
@@ -925,8 +924,13 @@ class Readable(Device):
         """Return a history of the parameter *name* (can also be ``'value'`` or
         ``'status'``).
 
-        *fromtime* and *totime* can be UNIX timestamps to specify a limiting
-        time window.
+        *fromtime* and *totime* can be used to limit the time window.  They can
+        be:
+
+        * positive numbers: interpreted as UNIX timestamps
+        * negative numbers: interpreted as hours back from now
+        * strings: in one of the formats 'HH:MM', 'HH:MM:SS',
+          'YYYY-MM-DD', 'YYYY-MM-DD HH:MM' or 'YYYY-MM-DD HH:MM:SS'
 
         Default is to query the values of the last hour.
         """
@@ -934,13 +938,17 @@ class Readable(Device):
             raise NicosError('no cache is configured for this setup')
         else:
             if fromtime is None:
-                fromtime = -3600
-            if fromtime < 0:
-                fromtime = currenttime() + fromtime
+                fromtime = -1
+            if isinstance(fromtime, str):
+                fromtime = parseDateString(fromtime)
+            elif fromtime < 0:
+                fromtime = currenttime() + fromtime * 3600
             if totime is None:
                 totime = currenttime()
+            elif isinstance(totime, str):
+                totime = parseDateString(totime, enddate=True)
             elif totime < 0:
-                totime = currenttime() + totime
+                totime = currenttime() + totime * 3600
             return self._cache.history(self, name, fromtime, totime)
 
     def info(self):
